fix overflow 1

--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ img {
   grid-row: 2 / 3;
   grid-column: 1 / 2;
   width: 680px;
-  margin: 0 0 28px;
+  margin: 310px 0 28px;
 
   font-weight: 700;
   font-size: 60px;
